--- a/simulations.ipynb
+++ b/simulations.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# First we calibrate using the heston model\n",
     "params = {\n",
-    "    \"h_0\"  : Param(.11/math.sqrt(252)),\n",
+    "    \"h_0\"  : Param(.11/math.sqrt(21)),\n",
     "    \"theta\": Param(.17/math.sqrt(252)),\n",
     "    \"rho\"  : Param(0.4),\n",
     "    \"kappa\": Param(.2),\n",
@@ -61,7 +61,7 @@
     "drift_h  = FParam(mu_h, params)\n",
     "vol_h    = FParam(v_h, params)\n",
     "T   = 252\n",
-    "N   = 1000\n",
+    "N   = 500\n",
     "\n",
     "cir_sim = EulerSimulation(drift_h, vol_h, params[\"h_0\"], T, params[\"dt\"], N)\n",
     "\n",
@@ -100,14 +100,14 @@
     "    plt.title(\"Index Price Simulation\")\n",
     "    plt.show()\n",
     "    \n",
-    "def call_price(result, targets):\n",
+    "def call_price(result, targets, r):\n",
     "    qt = T // 4\n",
     "    out = dict()\n",
     "    sse = 0.\n",
     "    for m in targets:\n",
     "        out[m] = dict()\n",
     "        for strike in targets[m]:\n",
-    "            out[m][strike] = np.maximum((result[(qt*m), :] - strike), 0).mean()\n",
+    "            out[m][strike] = np.maximum((result[(qt*m), :] - strike), 0).mean() * np.exp(- r * qt * m)\n",
     "            sse += (out[m][strike] - targets[m][strike])**2\n",
     "    return out, sse\n",
     "\n",
@@ -126,24 +126,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calibration 0/10 complete.\n"
+      "Calibration 1/10 complete.\n",
+      "Calibration 2/10 complete.\n",
+      "Calibration 3/10 complete.\n",
+      "Calibration 4/10 complete.\n",
+      "Calibration 5/10 complete.\n",
+      "Calibration 6/10 complete.\n"
      ]
     }
    ],
    "source": [
     "# Calibration\n",
-    "step = 10\n",
-    "theta_grid = np.linspace(0.001, 0.02, step)\n",
-    "kappa_grid = np.linspace(13, 20, step)\n",
-    "xi_grid    = np.linspace(0.001, 0.005, step)\n",
+    "step = 5\n",
+    "theta_grid = np.linspace(0.02, 0.03, step)\n",
+    "kappa_grid = np.linspace(10, 20, step)\n",
+    "xi_grid    = np.linspace(0.00001, 0.0001, step)\n",
     "opt_comb   = None\n",
     "opt_sse    = -1.\n",
     "opt_out    = None\n",
     "ct = 0\n",
     "    \n",
     "for theta in theta_grid:\n",
-    "    if ct % step == 0:\n",
-    "        print(f\"Calibration {ct // step}/{step} complete.\")\n",
     "    for kappa in kappa_grid:\n",
     "        ct += 1\n",
     "        for xi in xi_grid:\n",
@@ -152,11 +155,13 @@
     "            params[\"xi\"].val    = xi\n",
     "            if feller(params):\n",
     "                run_sims(cir_sim, simulation)\n",
-    "                out, sse = call_price(simulation.results, targets)\n",
+    "                out, sse = call_price(simulation.results, targets, params[\"r\"].eval())\n",
     "                if opt_sse < 0. or sse < opt_sse:\n",
     "                    opt_sse = sse\n",
     "                    opt_comb = (theta, kappa, xi)\n",
-    "                    opt_out = out"
+    "                    opt_out = out\n",
+    "    if ct % step == 0:\n",
+    "        print(f\"Calibration {ct // step}/{step} complete.\")"
    ]
   },
   {
