--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "3faa01be-38de-4038-aae5-296930278b8f",
    "metadata": {},
    "outputs": [],
@@ -22,104 +22,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "770bb11f-2493-41e8-831e-9d211953d9a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set the style for graphs\n",
-    "plt.rcParams[\"figure.figsize\"] = (10, 7)\n",
-    "plt.style.use('seaborn-darkgrid')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "5ec744e7-59e8-47a2-83d6-98e40524b181",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Payoff function inputs are option type and strike price\n",
-    "strike_price = 100\n",
-    "option_type = ql.Option.Call\n",
-    "\n",
-    "call_payoff = ql.PlainVanillaPayoff(option_type, strike_price) \n",
-    "\n",
-    "# Exercise function takes maturity date of the option as input\n",
     "day_count = ql.Actual365Fixed()\n",
     "calendar = ql.UnitedStates()\n",
-    "maturity = ql.Date(3, 8, 2021)\n",
-    "today = ql.Date(4, 8,2020)\n",
     "\n",
-    "call_exercise = ql.EuropeanExercise(maturity)\n",
+    "calculation_date = ql.Date(1, 1, 2015)\n",
     "\n",
-    "# Function inputs are striked type payoff and exercise\n",
-    "option = ql.VanillaOption(call_payoff, call_exercise)\n",
+    "spot = 100\n",
+    "ql.Settings.instance().evaluationDate = calculation_date\n",
     "\n",
-    "# Option input values\n",
-    "spot_price = 105\n",
-    "strike_price = 100\n",
-    "yearly_historical_volatility = 0.1\n",
-    "riskfree_rate = 0.0\n",
-    "dividend = 0"
+    "dividend_yield = ql.QuoteHandle(ql.SimpleQuote(0.0))\n",
+    "risk_free_rate = 0.0411\n",
+    "dividend_rate = 0.0\n",
+    "flat_ts = ql.YieldTermStructureHandle(\n",
+    "    ql.FlatForward(calculation_date, risk_free_rate, day_count))\n",
+    "dividend_ts = ql.YieldTermStructureHandle(\n",
+    "    ql.FlatForward(calculation_date, dividend_rate, day_count))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "65c24997-642d-42ef-bae9-15a0c22aec76",
+   "execution_count": 3,
+   "id": "24ea1dd2-b430-44d8-9f52-72681e1cd72a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "variance = 0.11*0.11/252 # Initial variance is square of volatility\n",
-    "kappa = 2       # Speed of mean reversion \n",
-    "theta = 0.01    # Long-run variance\n",
-    "epsilon = 0.1   # Volatility of volatility\n",
-    "rho = 0.0       # Correlation  "
+    "# dummy parameters\n",
+    "v0 = 0.024; kappa = 0.2; theta = 0.02; rho = -0.75; sigma = 0.5;\n",
+    "\n",
+    "process = ql.HestonProcess(flat_ts, dividend_ts, \n",
+    "                           ql.QuoteHandle(ql.SimpleQuote(spot)), \n",
+    "                           v0, kappa, theta, sigma, rho)\n",
+    "model = ql.HestonModel(process)\n",
+    "engine = ql.AnalyticHestonEngine(model) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3e8b565d-c2d7-4bb3-8873-c3b629321c2d",
+   "execution_count": 4,
+   "id": "1d20af60-2718-4b61-8d0a-ea9c37edd20e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "initial_value = ql.QuoteHandle(ql.SimpleQuote(spot_price))\n",
+    "targets = {\n",
+    "    ql.Date(1, 4, 2015): {95: 6.5757, 100: 2.8223, 105: 0.6335},\n",
+    "    ql.Date(1, 7, 2015): {95: 8.1165, 100: 4.3850, 105: 1.7263},\n",
+    "    ql.Date(1, 10, 2015): {100: 6.0865, 105: 3.1820, 110: 1.2347},\n",
+    "    ql.Date(1, 1, 2016): {100: 7.7710, 105: 4.7369, 110: 2.4165}\n",
+    "}\n",
     "\n",
-    "# Setting up flat risk free curves\n",
-    "discount_curve = ql.YieldTermStructureHandle(ql.FlatForward(today, riskfree_rate,day_count))\n",
-    "dividend_yield = ql.YieldTermStructureHandle(ql.FlatForward(today, dividend, day_count))\n",
-    "\n",
-    "heston_process = ql.HestonProcess(discount_curve,dividend_yield, initial_value,variance,kappa,theta,epsilon,rho)"
+    "vols = {\n",
+    "    ql.Date(1, 4, 2015): {95: 0.1323, 100: 0.1149, 105: 0.0994},\n",
+    "    ql.Date(1, 7, 2015): {95: 0.1345, 100: 0.1174, 105: 0.103},\n",
+    "    ql.Date(1, 10, 2015): {100: 0.13, 105: 0.116, 110: 0.102},\n",
+    "    ql.Date(1, 1, 2016): {100: 0.1410, 105: 0.128, 110: 0.114}\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2cf68c41-be13-4daa-81d0-73a863f75dab",
+   "execution_count": 5,
+   "id": "db201584-e11e-4ef9-90d1-ee567fc44b85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heston_helpers = []\n",
+    "for t_date in vols:\n",
+    "    for strike in vols[t_date]:\n",
+    "        t = t_date - calculation_date\n",
+    "        p = ql.Period(t, ql.Days)\n",
+    "        helper = ql.HestonModelHelper(p, calendar, spot, strike, \n",
+    "                                      ql.QuoteHandle(ql.SimpleQuote(vols[t_date][strike])),\n",
+    "                                      flat_ts, \n",
+    "                                      dividend_ts)\n",
+    "        helper.setPricingEngine(engine)\n",
+    "        heston_helpers.append(helper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2cb74165-91ce-4e91-8f53-627eb166493b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lm = ql.LevenbergMarquardt(1e-8, 1e-8, 1e-8)\n",
+    "model.calibrate(heston_helpers, lm, \n",
+    "                 ql.EndCriteria(500, 50, 1.0e-8,1.0e-8, 1.0e-8))\n",
+    "theta, kappa, sigma, rho, v0 = model.params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "50bb85cb-8aef-4780-aa38-7598cb86d8b0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "option_price 0.0\n"
+      "theta = 0.906697, kappa = 0.013170, sigma = 0.241603, rho = -0.674830, v0 = 0.011461\n"
      ]
     }
    ],
    "source": [
-    "# Inputs used for the engine are model, Tolerance level, maximum evaluations\n",
-    "engine = ql.AnalyticHestonEngine(ql.HestonModel(heston_process),0.001,1000)\n",
-    "option.setPricingEngine(engine)\n",
-    "price = option.NPV()\n",
-    "print (\"option_price\", round(price,2))"
+    "print(\"theta = %f, kappa = %f, sigma = %f, rho = %f, v0 = %f\" % (theta, kappa, sigma, rho, v0))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24ea1dd2-b430-44d8-9f52-72681e1cd72a",
+   "id": "27c4e62c-f29f-4dfc-8efa-f026d87df525",
    "metadata": {},
    "outputs": [],
    "source": []
