--- a/client_case.ipynb
+++ b/client_case.ipynb
@@ -136,8 +136,8 @@
     "        pricing = rn_pricing(defaults, T, spread, R).mean()\n",
     "        trials[i] = pricing\n",
     "    pricing = trials.mean()\n",
-    "    if abs(pricing) < EPS or it > 1000:\n",
-    "        return guess\n",
+    "    if abs(pricing) < EPS or it > 100:\n",
+    "        return guess, pricing\n",
     "    elif pricing < 0:\n",
     "        return bin_search(guess, hi, thetas, spread, it, R)\n",
     "    else:\n",
@@ -168,9 +168,48 @@
     "EPS    = 1e-6\n",
     "\n",
     "for y, spread in enumerate(SPREADS):\n",
-    "    next_theta = bin_search(1e-3, 5e-2, thetas, spread, 0, R)\n",
-    "    print(f\"Theta_{y+1} calibrated to be {next_theta}\")\n",
+    "    next_theta, err = bin_search(1e-3, 5e-2, thetas, spread, 0, R)\n",
+    "    print(f\"Theta_{y+1} calibrated to be {next_theta}.\")\n",
     "    thetas += [next_theta]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "35e4c269-9ac3-4b18-bf42-6dec1119f2a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Theta_1 calibrated to be 0.010139624701686688 with error 7.802020350256641e-07\n",
+      "Theta_2 calibrated to be 0.010877489507109157 with error -0.0002757221763104405\n",
+      "Theta_3 calibrated to be 0.011427898535591778 with error 0.00039816296606110603\n",
+      "Theta_4 calibrated to be 0.010211238067455001 with error -9.068628598484126e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calibrate \n",
+    "thetas = []\n",
+    "guess  = 0.\n",
+    "EPS    = 1e-6\n",
+    "\n",
+    "for y, spread in enumerate(SPREADS):\n",
+    "    next_theta, err = bin_search(1e-3, 5e-2, thetas, spread, 0, R)\n",
+    "    print(f\"Theta_{y+1} calibrated to be {next_theta} with error {err}\")\n",
+    "    thetas += [next_theta]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c90ac668-46b9-4d89-9ac3-427bce198d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thetas = [0.011852293096075071, 0.009040766594021893, 0.012600900100544096, 0.010085810910103327]"
    ]
   },
   {
@@ -183,7 +222,7 @@
     "def bin_search_h(lo, hi, thetas, spread, it, R):\n",
     "    it += 1\n",
     "    guess  = lo + (hi - lo)/2\n",
-    "    results = simulate(Y, ALPHA, SIGMA, guess, thetas)\n",
+    "    results = simulate(Z, ALPHA, SIGMA, guess, thetas)\n",
     "    trials = np.empty(10)\n",
     "    for i in range(10):\n",
     "        defaults, T = sim_defaults(results)\n",
@@ -200,17 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7b900879-1ee2-4c98-ad7d-8cc85305ea25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lock_thetas = thetas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "6b8c0085-de49-4909-bc37-e624b7cdc0b4",
    "metadata": {},
    "outputs": [],
@@ -221,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f191e40d-c78a-41a1-9344-9e616fd66cd6",
+   "id": "a28a148e-83e2-423e-98b3-26c3a1095d81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,11 +263,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
+   "id": "0f3593f0-a5bf-46d2-b472-32704b52f13d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.605724919362719e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = simulate(Z, ALPHA, SIGMA, 0.0055, thetas[:1])\n",
+    "trials = np.empty(100)\n",
+    "for i in range(50):\n",
+    "    defaults, T = sim_defaults(results)\n",
+    "    pricing = rn_pricing(defaults, T, 0.00605, 0.25).mean()\n",
+    "    trials[i] = pricing\n",
+    "pricing = trials.mean()\n",
+    "print(pricing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "id": "128f7293-bfb8-4872-88c1-8211f32ece6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h_s"
+   ]
   }
  ],
  "metadata": {
